  point exception signals from being generated by default. In version
  16.1.3, ECL would not change the options controlling the generation of
  such signals and simply not install a signal handler for floating point
  exceptions. This could lead to such signals being generated and caught by
  another signal handler if ECL was used as an embedded library.
* 16.1.3 changes since 16.1.2
** Announcement
Dear Community,

After almost a year of development we are proud to present a new release of
ECL tagged with version =16.1.3=. All changes are backward compatible
fixing bugs and other issues, implementing new interfaces and cleaning up
the code base.

ECL manual has been updated in a few places. Work on a new documentation is
still pending. It is still incomplete, but you may check see it here:
https://common-lisp.net/project/ecl/static/ecldoc/.

Before this release we have performed extensive tests on various platforms
(Linux, FreeBSD, OpenBSD, NetBSD, OSX, Windows MSVC, Windows MinGW, Windows
Cygwin, Android and Haiku). For details please consult
https://gitlab.com/embeddable-common-lisp/ecl/issues/307. Extra attention
has been paid to Windows testing to improve that platform support.

Best regards,
ECL Development Team

** API changes
- Added better interface for package-locks.

  Introduced functions:
  =ext:package-locked-p package=
  =ext:lock-package package=
  =ext:unlock-package package=
  =ext:without-package-locks=
  =ext:with-unlocked-package=

  To use these functions user has to require the module
  #+BEGIN_SRC lisp
    (require '#:package-locks)
  #+END_SRC

  =defpackage= accepts new option =lock= to allow locking package on
  creation:

  #+BEGIN_SRC lisp
    (defpackage foo (:lock t))
  #+END_SRC

- =mp:holding-lock-p=: introduce new function for multiprocessing. Function
  verifies if lock is hold by the thread which calls the function. Usage:
  =(mp:holding-lock-p my-lock)=.

- =make-random-state=: fix problem with simple-vectors. The correct