@@ -107,6 +107,8 @@ in C code
   such signals and simply not install a signal handler for floating point
   exceptions. This could lead to such signals being generated and caught by
   another signal handler if ECL was used as an embedded library.
+- Non-standard package nicknames (USER for COMMON-LISP-USER and LISP for
+  COMMON-LISP) have been removed.
 * 16.1.3 changes since 16.1.2
 ** Announcement
 Dear Community,
